# auth

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
src/config/: config.py  database.py
src/core/: dependencies.py
src/domain/: exceptions.py
src/domain/dtos/: user_dto.py
src/domain/models/: user.py
src/domain/services/: auth_service.py  oauth_service.py  password_reset_service.py  user_service.py
src/infrastructure/: app_config.py  dependencies.py
src/infrastructure/middleware/: cors.py
src/infrastructure/repositories/: user_repository.py
src/presentation/dtos/: auth_dto.py  password_reset_dto.py
src/presentation/routes/: auth_routes.py
